# python-project-50

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  makediff.py  parsing.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_makediff.py
